<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context=".nivel_1">

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:text="@string/tv_nombre"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_nombre"
        android:layout_alignLeft="@id/textView_nombre"
        android:text="@string/score"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_manzanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_score"
        android:layout_alignLeft="@id/textView_score"
        android:text="@string/manzanas"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView_vidas"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_below="@id/textView_score"
        android:layout_toRightOf="@id/textView_manzanas"
        app:srcCompat="@drawable/tresvidas" />


    <ImageView
        android:id="@+id/image1"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@id/textView_manzanas"
        android:layout_toLeftOf="@id/mas"
        android:layout_marginTop="61dp"
        app:srcCompat="@drawable/cuatro" />

    <ImageView
        android:id="@+id/mas"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@id/textView_manzanas"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"

        app:srcCompat="@drawable/resta" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="140sp"
        android:layout_height="140dp"
        android:layout_below="@id/imageView_vidas"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@id/mas"
        app:srcCompat="@drawable/tres" />

    <EditText
        android:id="@+id/editText_resultado"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_below="@id/image2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/respuesta"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image1" />

    <Button
        android:id="@+id/comprobar"
        android:layout_width="100sp"
        android:layout_height="37sp"
        android:layout_below="@id/image2"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/editText_resultado"
        android:background="@color/colorPrimary"
        android:onClick="Comparar"
        android:text="@string/comprobar"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/editText_resultado"
        app:layout_constraintTop_toBottomOf="@+id/image2" />

    <Button
        android:id="@+id/comprobar2"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/image2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_alignEnd="@id/image2"
        android:background="@android:color/holo_green_dark"
        android:onClick="salir"
        android:text="@string/salir"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/editText_resultado"
        app:layout_constraintTop_toBottomOf="@+id/image2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/fondoboton"
        app:srcCompat="@drawable/nivel3" />

</RelativeLayout>